syntax = "proto3";

package category;

option go_package = "proto;category";

service Category {
	rpc CreateCategory(CategoryRequest)returns (CreateCategoryResponse){}
	rpc UpdateCategory(CategoryRequest)returns(UpdateCategoryResponse){}
	rpc DeleteCategory(DeleteCategoryResquest)returns(DeleteCategoryResponse){}
	rpc FindCategoryByName(CategoryByNameResquest)returns (CategoryResponse){}
	rpc FindCategoryById(CategoryByIdResquest)returns (CategoryResponse){}
	rpc FindCategoryByLevel(CategoryByLevelResquest)returns (FindAllResponse){}
	rpc FindCategoryByParent(CategoryByParentResquest)returns (FindAllResponse){}
	rpc FindAllCategory(FindAllResquest)returns(FindAllResponse){}
}
message CategoryByLevelResquest{
	uint32 category_level=1;
}
message CategoryByIdResquest{
	int64 category_id=1;
}
message CategoryByNameResquest{
	string category_name=1;
}
message CategoryResponse{
	int64 id=1;
	string category_name=2;
	uint32 category_level=3;
	int64 category_parent=4;
	string category_images=5;
	string  category_description=6;
}


message CategoryRequest{
	string category_name=1;
	uint32 category_level=2;
	int64 category_parent=3;
	string category_images=4;
	string  category_description=5;
}
message CreateCategoryResponse{
	string msg=1;
	int64 category_id=2;

}
message UpdateCategoryResponse{
	string msg=1;
}

message DeleteCategoryResquest{
	int64 category_id=1;
}
message DeleteCategoryResponse{
	string msg=1;
}

message CategoryByParentResquest{
	int64 parent_id=1;
}
message FindAllResquest{

}

message FindAllResponse{
	repeated  CategoryResponse all=1;

}